--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Rococo Kid</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="https://en.wikipedia.org/wiki/The_Swing_(Fragonard)#/media/File:Joean_Honor%C3%A9_Fragonard_-_The_Swing.jpg" />
 </body>
  
 </html>
