--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-/* <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rococo Kid>
+    <title>Rococo Kid</title>
     <link rel="stylesheet" href="./index.css">
-</head> */
+</head>
  
 <body>
   <h1>Rococo Kid</h1>
