--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Rococo Kid</h1>
   <p>Welcome to my website!</p>
-  <img src="https://en.wikipedia.org/wiki/The_Swing_(Fragonard)#/media/File:Joean_Honor%C3%A9_Fragonard_-_The_Swing.jpg" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Joean_Honor%C3%A9_Fragonard_-_The_Swing.jpg"/>
 </body>
  
 </html>
