--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
+ 
+<head>
+ <meta charset="UTF-8">
+ <title>Rococo Kid</title>
+ <link rel="stylesheet" href="./index.css">
+</head
 
  
 <body>
